--- a/src/view/Appointment.fxml
+++ b/src/view/Appointment.fxml
@@ -5,69 +5,67 @@
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="699.0" prefWidth="624.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.AppointmentController">
-   <children>
-      <Label fx:id="headerLabel" layoutX="14.0" layoutY="14.0" prefHeight="27.0" prefWidth="166.0" text="New Appointment">
-         <font>
-            <Font name="System Bold Italic" size="18.0" />
-         </font>
-      </Label>
-      <TextField fx:id="idBox" disable="true" layoutX="228.0" layoutY="15.0" prefHeight="25.0" prefWidth="48.0" promptText="Auto">
-         <font>
-            <Font name="System Italic" size="12.0" />
-         </font>
-      </TextField>
-      <Label layoutX="203.0" layoutY="19.0" text="ID:" />
-      <TextField fx:id="subjectBox" layoutX="106.0" layoutY="65.0" prefHeight="25.0" prefWidth="174.0" />
-      <Label layoutX="26.0" layoutY="69.0" text="Subject/Title:" />
-      <Label layoutX="26.0" layoutY="114.0" text="Type:" />
-      <TextField fx:id="typeBox" layoutX="106.0" layoutY="110.0" prefHeight="25.0" prefWidth="174.0" />
-      <Label layoutX="26.0" layoutY="158.0" text="Location:" />
-      <TextField fx:id="locationBox" layoutX="106.0" layoutY="154.0" prefHeight="25.0" prefWidth="174.0" />
-      <DatePicker fx:id="datePicker" layoutX="426.0" layoutY="65.0" />
-      <Label layoutX="374.0" layoutY="69.0" text="Date:" />
+<AnchorPane id="AnchorPane" prefHeight="449.0" prefWidth="624.0" xmlns="http://javafx.com/javafx/17"
+            xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.AppointmentController">
+    <children>
+        <Label fx:id="headerLabel" layoutX="14.0" layoutY="14.0" prefHeight="27.0" prefWidth="166.0"
+               text="New Appointment">
+            <font>
+                <Font name="System Bold Italic" size="18.0"/>
+            </font>
+        </Label>
+        <TextField fx:id="idBox" disable="true" layoutX="228.0" layoutY="15.0" prefHeight="25.0" prefWidth="48.0"
+                   promptText="Auto">
+            <font>
+                <Font name="System Italic" size="12.0"/>
+            </font>
+        </TextField>
+        <Label layoutX="203.0" layoutY="19.0" text="ID:"/>
+        <TextField fx:id="subjectBox" layoutX="106.0" layoutY="65.0" prefHeight="25.0" prefWidth="174.0"/>
+        <Label layoutX="26.0" layoutY="69.0" text="Subject/Title:"/>
+        <Label layoutX="26.0" layoutY="114.0" text="Type:"/>
+        <TextField fx:id="typeBox" layoutX="106.0" layoutY="110.0" prefHeight="25.0" prefWidth="174.0"/>
+        <Label layoutX="26.0" layoutY="158.0" text="Location:"/>
+        <TextField fx:id="locationBox" layoutX="106.0" layoutY="154.0" prefHeight="25.0" prefWidth="174.0"/>
+        <DatePicker fx:id="datePicker" layoutX="426.0" layoutY="65.0"/>
+        <Label layoutX="374.0" layoutY="69.0" text="Date:"/>
       <ChoiceBox fx:id="startHour" layoutX="426.0" layoutY="110.0" prefHeight="25.0" prefWidth="41.0" />
       <Label layoutX="374.0" layoutY="114.0" text="Start:" />
-      <Label layoutX="474.0" layoutY="109.0" prefHeight="27.0" prefWidth="6.0" text=":">
-         <font>
-            <Font size="18.0" />
-         </font>
-      </Label>
-      <ChoiceBox fx:id="startMin" layoutX="489.0" layoutY="110.0" prefHeight="25.0" prefWidth="48.0" />
-      <ChoiceBox fx:id="startAmPm" layoutX="552.0" layoutY="110.0" prefHeight="25.0" prefWidth="48.0" />
-      <Label layoutX="374.0" layoutY="158.0" text="End:" />
-      <ChoiceBox fx:id="endHour" layoutX="426.0" layoutY="154.0" prefHeight="25.0" prefWidth="41.0" />
-      <ChoiceBox fx:id="endMin" layoutX="489.0" layoutY="154.0" prefHeight="25.0" prefWidth="48.0" />
-      <ChoiceBox fx:id="endAmPm" layoutX="552.0" layoutY="154.0" prefHeight="25.0" prefWidth="48.0" />
-      <Label layoutX="477.0" layoutY="153.0" prefHeight="27.0" prefWidth="6.0" text=":">
-         <font>
-            <Font size="18.0" />
-         </font>
-      </Label>
-      <TableView fx:id="attendeeTable" layoutX="27.0" layoutY="300.0" prefHeight="153.0" prefWidth="576.0">
-        <columns>
-          <TableColumn fx:id="nameCol" prefWidth="217.0" text="Name" />
-          <TableColumn fx:id="emailCol" prefWidth="187.0" text="Email" />
-            <TableColumn fx:id="phoneCol" prefWidth="214.0" text="Phone" />
-        </columns>
-      </TableView>
-      <Label layoutX="27.0" layoutY="268.0" text="Attendees:" />
-      <Label layoutX="29.0" layoutY="205.0" text="Customer:" />
-      <ComboBox fx:id="customerCombo" layoutX="106.0" layoutY="201.0" prefHeight="25.0" prefWidth="174.0" />
-      <Label layoutX="352.0" layoutY="205.0" text="Contact:" />
-      <ComboBox fx:id="contactCombo" layoutX="426.0" layoutY="201.0" prefHeight="25.0" prefWidth="174.0" />
-      <Button fx:id="addCustomer" layoutX="242.0" layoutY="237.0" mnemonicParsing="false" onAction="#addCustomer" text="Add" />
-      <Button fx:id="addContact" layoutX="562.0" layoutY="237.0" mnemonicParsing="false" onAction="#addContact" text="Add" />
-      <Label layoutX="25.0" layoutY="498.0" text="Description:" />
-      <TextArea fx:id="descBox" layoutX="27.0" layoutY="529.0" prefHeight="110.0" prefWidth="576.0" />
-      <Button layoutX="561.0" layoutY="660.0" mnemonicParsing="false" onAction="#save" text="Save" />
-      <Button layoutX="540.0" layoutY="461.0" mnemonicParsing="false" onAction="#remove" text="Remove" />
-   </children>
+        <Label layoutX="474.0" layoutY="109.0" prefHeight="27.0" prefWidth="6.0" text=":">
+            <font>
+                <Font size="18.0"/>
+            </font>
+        </Label>
+        <ChoiceBox fx:id="startMin" layoutX="489.0" layoutY="110.0" prefHeight="25.0" prefWidth="48.0"/>
+        <ChoiceBox fx:id="startAmPm" layoutX="552.0" layoutY="110.0" prefHeight="25.0" prefWidth="48.0"/>
+        <Label layoutX="374.0" layoutY="158.0" text="End:"/>
+        <ChoiceBox fx:id="endHour" layoutX="426.0" layoutY="154.0" prefHeight="25.0" prefWidth="41.0"/>
+        <ChoiceBox fx:id="endMin" layoutX="489.0" layoutY="154.0" prefHeight="25.0" prefWidth="48.0"/>
+        <ChoiceBox fx:id="endAmPm" layoutX="552.0" layoutY="154.0" prefHeight="25.0" prefWidth="48.0"/>
+        <Label layoutX="477.0" layoutY="153.0" prefHeight="27.0" prefWidth="6.0" text=":">
+            <font>
+                <Font size="18.0"/>
+            </font>
+        </Label>
+        <Label layoutX="29.0" layoutY="205.0" text="Customer:"/>
+        <ComboBox fx:id="customerCombo" layoutX="106.0" layoutY="201.0" prefHeight="25.0" prefWidth="174.0"/>
+        <Label layoutX="352.0" layoutY="205.0" text="Contact:"/>
+        <ComboBox fx:id="contactCombo" layoutX="426.0" layoutY="201.0" prefHeight="25.0" prefWidth="174.0"/>
+        <Label layoutX="25.0" layoutY="246.0" text="Description:"/>
+        <TextArea fx:id="descBox" layoutX="24.0" layoutY="277.0" prefHeight="110.0" prefWidth="576.0"/>
+        <Button layoutX="556.0" layoutY="403.0" mnemonicParsing="false" onAction="#save" text="Save"/>
+        <Label fx:id="titleStar" layoutX="21.0" layoutY="69.0" text="*" textFill="RED" visible="false"/>
+        <Label fx:id="typeStar" layoutX="18.0" layoutY="114.0" text="*" textFill="RED" visible="false"/>
+        <Label fx:id="locationStar" layoutX="18.0" layoutY="158.0" text="*" textFill="RED" visible="false"/>
+        <Label fx:id="customerStar" layoutX="21.0" layoutY="205.0" text="*" textFill="RED" visible="false"/>
+        <Label fx:id="contactStar" layoutX="346.0" layoutY="205.0" text="*" textFill="RED" visible="false"/>
+        <Label fx:id="endStar" layoutX="368.0" layoutY="158.0" text="*" textFill="RED" visible="false"/>
+        <Label fx:id="startStar" layoutX="368.0" layoutY="114.0" text="*" textFill="RED" visible="false"/>
+        <Label fx:id="dateStar" layoutX="368.0" layoutY="69.0" text="*" textFill="RED" visible="false"/>
+    </children>
 </AnchorPane>
