--- a/src/view/Dashboard.fxml
+++ b/src/view/Dashboard.fxml
@@ -14,61 +14,83 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" maxHeight="600.0" maxWidth="1100.0" minHeight="600.0" minWidth="1100.0" prefHeight="600.0" prefWidth="1040.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.DashboardController">
-   <children>
-      <TabPane layoutX="50.0" layoutY="50.0" minHeight="500.0" minWidth="1000.0" prefHeight="200.0" prefWidth="200.0" tabClosingPolicy="UNAVAILABLE">
-        <tabs>
-          <Tab fx:id="appTab" text="Appointments">
-            <content>
-              <AnchorPane maxWidth="1000.0" minHeight="0.0" minWidth="1000.0" prefHeight="180.0" prefWidth="1000.0">
-                     <children>
-                        <TableView fx:id="appointmentView" layoutY="36.0" maxHeight="400.0" maxWidth="750.0" minHeight="400.0" minWidth="1000.0" prefHeight="400.0" prefWidth="750.0">
-                           <columns>
-                              <TableColumn fx:id="appIDCol" prefWidth="44.0" text="ID" />
-                              <TableColumn fx:id="appTitleCol" prefWidth="106.0" text="Title" />
-                              <TableColumn fx:id="appTypeCol" prefWidth="82.0" text="Type" />
-                              <TableColumn fx:id="appDescCol" prefWidth="192.0" text="Description" />
-                              <TableColumn fx:id="appLocationCol" prefWidth="108.0" text="Location" />
-                              <TableColumn fx:id="appContactCol" prefWidth="72.0" text="Contact ID" />
-                              <TableColumn fx:id="appDateCol" prefWidth="75.0" text="Date" />
-                              <TableColumn fx:id="appStartCol" prefWidth="111.0" text="Start Time" />
-                              <TableColumn fx:id="appEndCol" prefWidth="104.0" text="End Time" />
-                              <TableColumn fx:id="appCustIDCol" text="Customer ID" />
-                           </columns>
-                           <columnResizePolicy>
-                              <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
-                           </columnResizePolicy>
-                        </TableView>
-                        <Label layoutY="15.0" text="Appointments">
-                           <font>
-                              <Font name="System Bold Italic" size="14.0" />
-                           </font>
-                        </Label>
-                        <RadioButton fx:id="monthRadio" layoutX="929.0" layoutY="16.0" mnemonicParsing="false" onAction="#toggleSwitch" text="Month" />
-                        <RadioButton fx:id="weekRadio" layoutX="868.0" layoutY="16.0" mnemonicParsing="false" onAction="#toggleSwitch" text="Week" />
-                        <RadioButton fx:id="allRadio" layoutX="825.0" layoutY="16.0" mnemonicParsing="false" onAction="#toggleSwitch" selected="true" text="All" />
-                        <Button fx:id="newAppButton" layoutX="958.0" layoutY="445.0" mnemonicParsing="false" onAction="#launchAppointmentWindow" text="New" />
-                        <Button fx:id="editAppButton" layoutX="911.0" layoutY="445.0" mnemonicParsing="false" onAction="#editAppointment" text="Edit" />
-                        <AnchorPane fx:id="dateAnchor" layoutX="400.0" layoutY="-9.0" maxHeight="50.0" maxWidth="250.0" minHeight="50.0" minWidth="250.0" prefHeight="50.0" prefWidth="250.0" visible="false">
-                           <children>
-                              <Button fx:id="dateLeft" layoutX="15.0" layoutY="17.0" maxWidth="30.0" minWidth="30.0" mnemonicParsing="false" onAction="#last" prefHeight="20.0" prefWidth="30.0" scaleX="0.7" scaleY="1.3" text="◄">
-                                 <font>
-                                    <Font size="28.0" />
-                                 </font>
-                                 <padding>
-                                    <Insets bottom="-10.0" top="-10.0" />
-                                 </padding>
-                              </Button>
-                              <Label fx:id="dateRangeLabel" alignment="CENTER" layoutX="50.0" layoutY="19.0" maxWidth="140.0" minWidth="150.0" prefHeight="17.0" prefWidth="140.0" text="00/00/0000 - 00/00/0000" textAlignment="CENTER">
-                                 <font>
-                                    <Font name="System Bold" size="12.0" />
-                                 </font>
-                              </Label>
-                              <Button fx:id="dateRight" alignment="CENTER_RIGHT" contentDisplay="TOP" graphicTextGap="0.0" layoutX="205.0" layoutY="17.0" maxWidth="30.0" minWidth="30.0" mnemonicParsing="false" onAction="#next" prefWidth="30.0" scaleX="0.7" scaleY="1.3" text="►" textAlignment="CENTER">
-                                 <font>
-                                    <Font size="28.0" />
-                                 </font>
-                                 <padding>
+<AnchorPane id="AnchorPane" maxHeight="600.0" maxWidth="1100.0" minHeight="600.0" minWidth="1100.0" prefHeight="600.0"
+            prefWidth="1040.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1"
+            fx:controller="view.DashboardController">
+    <children>
+        <TabPane layoutX="50.0" layoutY="50.0" minHeight="500.0" minWidth="1000.0" prefHeight="200.0" prefWidth="200.0"
+                 tabClosingPolicy="UNAVAILABLE">
+            <tabs>
+                <Tab fx:id="appTab" text="Appointments">
+                    <content>
+                        <AnchorPane maxWidth="1000.0" minHeight="0.0" minWidth="1000.0" prefHeight="180.0"
+                                    prefWidth="1000.0">
+                            <children>
+                                <TableView fx:id="appointmentView" layoutY="36.0" maxHeight="400.0" maxWidth="750.0"
+                                           minHeight="400.0" minWidth="1000.0" prefHeight="400.0" prefWidth="750.0">
+                                    <columns>
+                                        <TableColumn fx:id="appIDCol" prefWidth="44.0" text="ID"/>
+                                        <TableColumn fx:id="appTitleCol" prefWidth="106.0" text="Title"/>
+                                        <TableColumn fx:id="appTypeCol" prefWidth="82.0" text="Type"/>
+                                        <TableColumn fx:id="appDescCol" prefWidth="192.0" text="Description"/>
+                                        <TableColumn fx:id="appLocationCol" prefWidth="108.0" text="Location"/>
+                                        <TableColumn fx:id="appContactCol" prefWidth="72.0" text="Contact ID"/>
+                                        <TableColumn fx:id="appDateCol" prefWidth="75.0" text="Date"/>
+                                        <TableColumn fx:id="appStartCol" prefWidth="111.0" text="Start Time"/>
+                                        <TableColumn fx:id="appEndCol" prefWidth="104.0" text="End Time"/>
+                                        <TableColumn fx:id="appCustIDCol" text="Customer ID"/>
+                                    </columns>
+                                    <columnResizePolicy>
+                                        <TableView fx:constant="CONSTRAINED_RESIZE_POLICY"/>
+                                    </columnResizePolicy>
+                                </TableView>
+                                <Label layoutY="15.0" text="Appointments">
+                                    <font>
+                                        <Font name="System Bold Italic" size="14.0"/>
+                                    </font>
+                                </Label>
+                                <RadioButton fx:id="monthRadio" layoutX="929.0" layoutY="16.0" mnemonicParsing="false"
+                                             onAction="#toggleSwitch" text="Month"/>
+                                <RadioButton fx:id="weekRadio" layoutX="868.0" layoutY="16.0" mnemonicParsing="false"
+                                             onAction="#toggleSwitch" text="Week"/>
+                                <RadioButton fx:id="allRadio" layoutX="825.0" layoutY="16.0" mnemonicParsing="false"
+                                             onAction="#toggleSwitch" selected="true" text="All"/>
+                                <Button fx:id="newAppButton" layoutX="848.0" layoutY="445.0" mnemonicParsing="false"
+                                        onAction="#launchAppointmentWindow" text="New"/>
+                                <Button fx:id="editAppButton" layoutX="894.0" layoutY="445.0" mnemonicParsing="false"
+                                        onAction="#editAppointment" text="Edit"/>
+                                <Button fx:id="deleteAppButton" layoutX="935.0" layoutY="445.0" mnemonicParsing="false"
+                                        onAction="#deleteAppointment" text="Delete"/>
+                                <AnchorPane fx:id="dateAnchor" layoutX="400.0" layoutY="-9.0" maxHeight="50.0"
+                                            maxWidth="250.0" minHeight="50.0" minWidth="250.0" prefHeight="50.0"
+                                            prefWidth="250.0" visible="false">
+                                    <children>
+                                        <Button fx:id="dateLeft" layoutX="15.0" layoutY="17.0" maxWidth="30.0"
+                                                minWidth="30.0" mnemonicParsing="false" onAction="#last"
+                                                prefHeight="20.0" prefWidth="30.0" scaleX="0.7" scaleY="1.3" text="◄">
+                                            <font>
+                                                <Font size="28.0"/>
+                                            </font>
+                                            <padding>
+                                                <Insets bottom="-10.0" top="-10.0"/>
+                                            </padding>
+                                        </Button>
+                                        <Label fx:id="dateRangeLabel" alignment="CENTER" layoutX="50.0" layoutY="19.0"
+                                               maxWidth="140.0" minWidth="150.0" prefHeight="17.0" prefWidth="140.0"
+                                               text="00/00/0000 - 00/00/0000" textAlignment="CENTER">
+                                            <font>
+                                                <Font name="System Bold" size="12.0"/>
+                                            </font>
+                                        </Label>
+                                        <Button fx:id="dateRight" alignment="CENTER_RIGHT" contentDisplay="TOP"
+                                                graphicTextGap="0.0" layoutX="205.0" layoutY="17.0" maxWidth="30.0"
+                                                minWidth="30.0" mnemonicParsing="false" onAction="#next"
+                                                prefWidth="30.0" scaleX="0.7" scaleY="1.3" text="►"
+                                                textAlignment="CENTER">
+                                            <font>
+                                                <Font size="28.0"/>
+                                            </font>
+                                            <padding>
                                     <Insets bottom="-10.0" left="1.0" right="1.0" top="-10.0" />
                                  </padding>
                               </Button>
@@ -82,26 +104,31 @@
             <content>
               <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                      <children>
-                        <TableView fx:id="customerView" layoutY="36.0" maxHeight="400.0" maxWidth="750.0" minHeight="400.0" minWidth="1000.0" prefHeight="400.0" prefWidth="750.0">
-                           <columns>
-                              <TableColumn fx:id="custIDCol" prefWidth="44.0" text="ID" />
-                              <TableColumn fx:id="custNameCol" prefWidth="183.0" text="Name" />
-                              <TableColumn fx:id="custAddressCol" prefWidth="274.0" text="Address" />
-                              <TableColumn fx:id="custZipCol" prefWidth="127.0" text="Postal Code" />
-                              <TableColumn fx:id="custStateCol" prefWidth="117.0" text="State/Territory" />
-                              <TableColumn fx:id="custCountryCol" prefWidth="154.0" text="Country" />
-                           </columns>
-                           <columnResizePolicy>
-                              <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
-                           </columnResizePolicy>
-                        </TableView>
-                        <Button fx:id="newCustButton" layoutX="958.0" layoutY="445.0" mnemonicParsing="false" onAction="#launchCustomerWindow" text="New" />
-                        <Button fx:id="editCustButton" layoutX="911.0" layoutY="445.0" mnemonicParsing="false" onAction="#editCustomer" text="Edit" />
-                        <Label layoutY="14.0" text=" All Customers">
-                           <font>
-                              <Font name="System Bold Italic" size="14.0" />
-                           </font>
-                        </Label>
+                         <TableView fx:id="customerView" layoutY="36.0" maxHeight="400.0" maxWidth="750.0"
+                                    minHeight="400.0" minWidth="1000.0" prefHeight="400.0" prefWidth="750.0">
+                             <columns>
+                                 <TableColumn fx:id="custIDCol" prefWidth="44.0" text="ID"/>
+                                 <TableColumn fx:id="custNameCol" prefWidth="183.0" text="Name"/>
+                                 <TableColumn fx:id="custAddressCol" prefWidth="274.0" text="Address"/>
+                                 <TableColumn fx:id="custZipCol" prefWidth="127.0" text="Postal Code"/>
+                                 <TableColumn fx:id="custStateCol" prefWidth="117.0" text="State/Territory"/>
+                                 <TableColumn fx:id="custCountryCol" prefWidth="154.0" text="Country"/>
+                             </columns>
+                             <columnResizePolicy>
+                                 <TableView fx:constant="CONSTRAINED_RESIZE_POLICY"/>
+                             </columnResizePolicy>
+                         </TableView>
+                         <Button fx:id="deleteCustButton" layoutX="935.0" layoutY="445.0" mnemonicParsing="false"
+                                 onAction="#deleteCustomer" text="Delete"/>
+                         <Button fx:id="newCustButton" layoutX="846.0" layoutY="445.0" mnemonicParsing="false"
+                                 onAction="#launchCustomerWindow" text="New"/>
+                         <Button fx:id="editCustButton" layoutX="892.0" layoutY="445.0" mnemonicParsing="false"
+                                 onAction="#editCustomer" text="Edit"/>
+                         <Label layoutY="14.0" text=" All Customers">
+                             <font>
+                                 <Font name="System Bold Italic" size="14.0"/>
+                             </font>
+                         </Label>
                      </children>
                   </AnchorPane>
             </content>
